spacing fixes and wordpress initial commit

--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -1,4 +1,5 @@
 $primary-color: #00b9ff;
-$seconday-color: #0078b4;
+$box-color: #5fd3ff;
+$menu-color: #01b7fc;
 $complimentary: #fff300;
-$text-color: #505050;
+$text-color: #606060;
