--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -7,7 +7,7 @@
 
 @mixin blog-dates {
 	display: block;
-	color: #999;
+	color: lighten($text-color, 45%);
 	font-size: ($base-font-size - 2);
 	font-weight: 400;
 	margin-bottom: $base-line-height;
