--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,12 +20,10 @@ html {
 
 body {
 	@include container;
-	padding-top: 5%;
+	padding-top: $base-line-height*3.5;
 	color: $text-color;
 	height: 100%;
-	min-height: 100%;	
-	
-	
+	min-height: 100%;
 }
 
 
@@ -34,7 +32,12 @@ body {
 	@include span-columns(4);
 	img { display: inline }
 	#logo { display: inline }
-	#lettering { float: right }
+	#lettering { 
+		float: right; 
+		position: relative;
+		top: 10px;
+	}
+	margin-bottom: 50px;
 }
 
 
@@ -45,23 +48,24 @@ body {
 	-webkit-font-smoothing: antialiased;
 	@include titles;
 
-	ul {
-		display: inline;
+	ul { display: inline; }
+
+	.second-level li {
+		font-size: $base-font-size+1;
 	}
-	
 }
 
 #primary-menu {
 	position: relative;
 	@include span-columns(4);
 	text-align: right;
-	margin-bottom: 4px;
+	margin-bottom: $base-line-height;
 	
 	.second-level {
 		@include span-columns(4 omega);
 		position: absolute; z-index: 1;
-		top: $base-line-height+5; left: 0;
-		background: rgba($primary-color, 0.65);
+		top: $base-line-height*2; left: 0;
+		background: rgba($menu-color, 0.65);
 		padding: $base-line-height/2 0;
 		
 
@@ -72,9 +76,12 @@ body {
 		&:after {
 			content: '▴';
 			font-style: normal;
+			font-size: 250px;
 			position: absolute;
-			top: -13px; right: 290px;
-			color: $primary-color;
+			top: -13px; right: 295px;
+			color: $menu-color;
+			font-size: $base-font-size+3;
+			@include scale(3,1.5);
 		}
 	}
 
@@ -86,7 +93,7 @@ body {
 
 #featured {
 	@include span-columns(4);
-	margin-bottom: $base-line-height*2;
+	margin-bottom: $base-line-height;
 
 	li  {
 		position: relative;
@@ -100,12 +107,12 @@ body {
 	}
 
 	header {
-		width: 305px;
+		width: 247px;
 		max-height: 200px;
 		background: rgba($primary-color, 0.65);
 		position: absolute;
-		bottom: 50px; right: 0;
-		padding: $base-line-height;
+		bottom: 50px; right: 0%;
+		padding: 24px 29px;
 		-webkit-font-smoothing: antialiased;
 		@include transition(opacity, 0.3s);
 	}
@@ -114,16 +121,19 @@ body {
 		font-size: $base-font-size+8;
 		font-weight: 800;
 		color: $complimentary;
-		margin-bottom: $base-line-height;
+		margin-bottom: (($base-line-height * 2) - 8);
 	}
 
-	p { font-size: ($base-font-size - 2); }
+	p { 
+		font-size: ($base-font-size - 2);
+		line-height: $base-font-size*1.2;
+	}
 	a { color: #fff }
 }
 
 #branding {
-	@include span-columns(4);
-	margin-bottom: $base-line-height*2;
+	@include span-columns(4 omega);
+	margin-bottom: (($base-line-height*4) - 10);
 
 	iframe {
 		@include span-columns(3);
@@ -136,7 +146,7 @@ body {
 		line-height: $base-line-height+3;
 		margin-bottom: 25px;
 
-		p:last-child { margin-bottom: 0; }
+		&:last-child { margin-bottom: 0; }
 	}
 
 }
@@ -245,31 +255,40 @@ body {
 }
 
 #project {
+	
+	font-size: $base-font-size+2;
+	line-height: $base-line-height+5;
 
 	header {
 		h1, h2 {
 			@include titles;
-			margin-bottom: $base-line-height;
+			margin-bottom: ($base-line-height*2) - 2;
 		}
 
 		h1 {
 			font-size: $base-font-size*2;
+			margin-bottom: ($base-line-height*2) - 2;
 		}
 	}
 
 	p {
-		font-family: $display-font;
-		font-style: italic;
-		font-size: ($base-font-size - 2);
-		margin-bottom: $base-line-height;
+		@include titles;
 		color: $text-color;
 	}
 
-
-
 	#content, aside {
 		@include span-columns(2);
-		margin-top: $base-line-height;
+		margin-top: $base-line-height*2;
+	}
+	
+	#content {
+		iframe, img, video, audio {
+			margin: $base-line-height+5 0;
+		}
+	}
+	
+	#gallery {
+		margin-bottom: $base-line-height*2;
 	}
 
 	aside {	@include omega;	}
@@ -308,7 +327,7 @@ body {
 
 	#latest-works {
 		clear: both;
-		padding-top: $base-line-height*3;
+		padding-top: $base-line-height*4;
 	}
 }
 
@@ -320,7 +339,7 @@ body {
 		p { 
 			@include titles;
 			color: $text-color;
-			font-size: $base-font-size+4;
+			font-size: $base-font-size*1.5;
 			line-height: $base-line-height*1.5;
 			margin-bottom: $base-line-height;
 		}
@@ -339,12 +358,12 @@ body {
 		@include titles;
 	}
 
-	h1 { margin-bottom: $base-line-height; }
+	h1 { margin-bottom: $base-line-height*0.7; }
 	
 	h2, h3 { color: $text-color }
 
 	hgroup {
-		margin: $base-line-height/2 0 $base-line-height*1.5 0;
+		margin: $base-line-height/2 0 $base-line-height 0;
 		a { color: $text-color }	
 	}
 	
@@ -352,9 +371,10 @@ body {
 		font-family: $display-font;
 		font-style: italic;
 		margin-bottom: $base-line-height;
+		letter-spacing: -0.1em
 	}
 
-	& > h1 { font-size: $base-font-size*1.5 }
+	& > h1 { font-size: $base-font-size*1.9; margin-bottom: $base-line-height*1.2 }
 
 	li {
 		@include span-columns(1, 4);
@@ -381,8 +401,8 @@ body {
 	}
 
 	article {
-		@include span-columns(2);
-		width: space(2)*1.5+gutter(1)*0.5;
+		@include span-columns(2, 3);
+		max-width: 573px;
 		margin-right: 0;
 	}
 
@@ -407,7 +427,8 @@ body {
 
 	#sharing {
 		@include span-columns(1 omega, 3);
-		width: space(1)*0.5;
+		width: 170px;
+		padding-top: (($base-line-height*3) + 6);
 	}
 }
 
@@ -416,12 +437,12 @@ body {
 
 	h1 {
 		@include titles;
-		font-size: $base-font-size+4;
-		margin-bottom: $base-line-height;
+		font-size: $base-font-size*1.5;
+		margin-bottom: $base-line-height*2.3;
 	}
 
 	a {
-		font-size: ($base-font-size - 2);
+		font-size: ($base-font-size);
 		color: $text-color;
 	}
 
@@ -449,6 +470,8 @@ body {
 	margin-top: $base-line-height*4;
 	font-family: $display-font;
 	font-style: italic;
+	font-size: 18px;
+	line-height: $base-line-height+2;
 	
 	h1, h2 { 
 		font-weight: 800;
@@ -462,12 +485,16 @@ body {
 		@include span-columns(1, 4);
 	}
 
+	aside {
+		max-width: 206px;
+	}
+
 	aside a { 
-			font-weight: 800; 
-			color: $text-color;
-			display: block;
-			margin-top: $base-line-height;
-		}
+		font-weight: 800; 
+		color: $text-color;
+		display: block;
+		margin-top: $base-line-height;
+	}
 }
 
 .js {
@@ -475,7 +502,7 @@ body {
 	.carousel {
 		overflow: hidden;
 		position: relative;
-		padding-bottom: $base-line-height;
+		padding-bottom: $base-line-height+15;
 
 		ul {
 			width: 20000em;
@@ -496,23 +523,30 @@ body {
 
 	#featured {
 		height: 450px;
-
 		li { max-width: 955px; }
 	}
 
 	#car_nav {
 		position: absolute;
-		left: 50%;
+		width:100%;
+		left: 0;
 		bottom: 0;
-		margin-left: -40px;
+		text-align: center;
+		
+		ol {
+			display: inline;
+		}
 
 		li {
 			display: inline;
 			float: none;
-			margin-right: 5px;
+			margin-right: 10px;
 		}
 
-		a { color: $primary-color }
+		a { 
+			color: $primary-color; 
+			font-size: 20px; 
+		}
 	}
 
 }
